Nm resize fix: - Fix dataview grid resize not taking care of category color border - Fix Category borders make headers misaligned

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -54,3 +54,5 @@ label.tracker_trIdEdit:before { content: "#"; }
 #tracker-edit_tr_assigned + .chzn-container .chzn-results {
 	max-height: 215px;
 }
+
+#tracker-index_nm.et2_nextmatch .egwGridView_outer thead tr {border-left: 12px solid transparent;}
